--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <body>
     <header class="header" id="header">
       <nav class="nav container">
-        <a href="#" class="nav__logo">Ghizlane</a>
+        <a href="#" class="nav__logo"><img src="img/logo.png" alt="" /></a>
 
         <div class="nav__menu" id="nav-menu">
           <ul class="nav__list">
